signup, login, logout

--- a/webshop/templates/login.html
+++ b/webshop/templates/login.html
@@ -9,25 +9,19 @@
         <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
           <div class="card card-signin my-5">
             <div class="card-body">
-              <h5 class="card-title text-center">Регистрация</h5>
+              <h5 class="card-title text-center">Вход</h5>
                 <form class="form-signin" method="post">
                 
                 {% csrf_token %}
-                {% for f in user_form %}
+                {% for f in form %}
                     <div class="form-label-group">
                         {{ f }}
                         <label for="{{ f.field.widget.attrs.id }}">{{ f.field.widget.attrs.placeholder }}</label>
+                        {{ f.errors }}
                     </div>  
                 {% endfor %}
 
-                {% for f in profile_form %}
-                <div class="form-label-group">
-                    {{ f }}
-                    <label for="{{ f.field.widget.attrs.id }}">{{ f.field.widget.attrs.placeholder }}</label>
-                </div>  
-                {% endfor %}
-
-                <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Зарегистрироваться</button>
+                <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Войти</button>
                 <hr class="my-4">
               </form>
             </div>
