--- a/webshop/templates/base.html
+++ b/webshop/templates/base.html
@@ -4,11 +4,11 @@
 <html lang="en" >
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Webshop</title>
   <link type="text/css" rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
   <link type="text/css" rel="stylesheet" href="{% static "css/main.css" %}">
+  {% block extra_css %}{% endblock %}
   <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
 </head>
 <body class="" data-gr-c-s-loaded="true">
