--- a/webshop/templates/include/top-nav.html
+++ b/webshop/templates/include/top-nav.html
@@ -4,16 +4,16 @@
           <span class="navbar-toggler-icon"></span>
         </button>
     
-        <div class="navbar-collapse collapse" id="navbarColor02" style="">
+        <div class="navbar-collapse collapse" id="navbarColor02">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Товары</a>
+              <a class="nav-link" href="{% url 'webshop:index' %}">Товары</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Заказы</a>
+              <a class="nav-link" href="{% url 'webshop:order_list' %}">Заказы</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Корзина</a>
+              <a class="nav-link" href="{% url 'webshop:cart' %}">Корзина</a>
             </li>
             {% if user.is_authenticated %}
             <li class="nav-item">
