--- a/webshop/templates/index.html
+++ b/webshop/templates/index.html
@@ -3,10 +3,10 @@
 
 {% block content %}
 <div class="container">
-    <h1 class="display-3">Каталог</h1>
+    <h1>Каталог</h1>
     <div class="row">
         <div class="col-2">
-            <h3>Категории:</h3>
+            <h4>Категории:</h4>
             <form method="post">
                 {% csrf_token %}
                 {% for category in categories %}
@@ -21,13 +21,13 @@
         </div>
         <div class="row col-md-8 bg-light">
             {% for product in products %}
-            <a class="col-md-4" href="#">
-                {{ product.name }}
-            </a>
+                <a class="col-md-4" href="/goods/{{ product.pk }}">
+                    {{ product.name }}
+                </a>
             {% endfor %}
         </div>
         <div class="col-2">
-            <h3>Магазины:</h3>
+            <h4>Магазины:</h4>
             <form method="post">
             {% csrf_token %}
             {% for shop in shops %}
@@ -39,7 +39,7 @@
             {% endfor %}
             <button class="btn btn-light" type="submit">Применить</button>
             </form>
-            <h3>Характеристики:</h3>
+            <h4>Характеристики:</h4>
             <form method="post">
             {% csrf_token %}
             {% for parameter in parameters %}
