--- a/webshop/templates/cart.html
+++ b/webshop/templates/cart.html
@@ -1,8 +1,42 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div>cart contents: {{ cart_contents }}</div>
-<div>cart count: {{ cart_count }}</div>
-<div>delivery count: {{ delivery_count }}</div>
-<div>price total: {{ price_total }}</div>
+<div class="container">
+    <h1>Корзина</h1>
+    <table class="cart-table">
+        <tr>
+            <th>Название</th>
+            <th>Магазин</th>
+            <th>Количество</th>
+            <th>Сумма</th>
+        </tr>
+        {% for content in cart_contents %}
+        <tr>
+            <td>{{ content.0.name }}</td>
+            <td>{{ content.1.name }}</td>
+            <td>{{ content.2 }}</td>
+            <td>{{ content.3 }} ₽</td>
+        </tr>
+        {% endfor %}
+    </table>
+    <div class="row">
+        <div class="col">
+            <p>Нажимая "Оформить заказ",
+                Вы соглашаетесь с условиями и стоимостью доставки.
+                Стоимость доставки = количество поставщиков * 100 руб.</p>
+        </div>
+        <div class="col">
+            <p>Итого: <span class="font-weight-bold">{{ price_total }} ₽</span></p>
+            <p>Доставка: <span class="font-weight-bold">{{ delivery_count }} ₽</span></p>
+            <p>К оплате: <span class="font-weight-bold">{{ price_total|add:delivery_count }} ₽</span></p>
+            <form action="{% url 'webshop:create_order' %}" method="post">
+                {% csrf_token %}
+                <input type="hidden" name="order_action" value="create">
+                <button type="submit" class="submit_btn btn label-success" {% if not cart_contents %}disabled{% endif %}>
+                    Оформить
+                </button>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
